kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: real-time-chat-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/hsts: "false"
    nginx.ingress.kubernetes.io/hsts-max-age: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: swwao.courses.orbit.au.dk
      http:
        paths:
          - path: /grp-6/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 3004
          - path: /grp-6/user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 3001
          - path: /grp-6/chat(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-service
                port:
                  number: 3002
          - path: /grp-6/message(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: message-service
                port:
                  number: 3003
          - path: /grp-6/frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /grp-6/graphql(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: graphql
                port:
                  number: 4000
          - path: /grp-6/api-gateway(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
